tests/commands/snapshots/integration_test__commands__check_file_pair__create_if_not_exists_dry_run.snap
---
source: tests/commands/check_file_pair.rs
expression: "stdout.replace(temp_dir.path().to_str().unwrap(), \"<temp_dir>\")"
---
[WARN] Pair of file <temp_dir>/src/utils/logger.py does not exist: <temp_dir>/tests/utils/test_logger.py
[WARN] Pair of file <temp_dir>/src/utils/slack/template.py does not exist: <temp_dir>/tests/utils/slack/test_template.py
[WARN] Creating missing file: <temp_dir>/tests/utils/test_logger.py
[WARN] Creating missing file: <temp_dir>/tests/utils/slack/test_template.py
