tests/commands/snapshots/integration_test__commands__check_file_pair__empty_directory_no_error_no_output.snap
---
source: tests/commands/check_file_pair.rs
expression: "stdout.replace(temp_dir.path().to_str().unwrap(), \"<temp_dir>\")"
---
[INFO] Everything is fine, no missing files.
