tests/commands/snapshots/integration_test__commands__check_file_pair__forward_matching.snap
---
source: tests/commands/check_file_pair.rs
expression: "stdout.replace(temp_dir.path().to_str().unwrap(), \"<temp_dir>\")"
---
[WARN] Pair of file <temp_dir>/src/__init__.py does not exist: <temp_dir>/tests/test___init__.py
[WARN] Pair of file <temp_dir>/src/main.py does not exist: <temp_dir>/tests/test_main.py
[WARN] Pair of file <temp_dir>/src/utils/logger.py does not exist: <temp_dir>/tests/utils/test_logger.py
[WARN] Pair of file <temp_dir>/src/utils/slack/template.py does not exist: <temp_dir>/tests/utils/slack/test_template.py
