tests/commands/snapshots/integration_test__commands__check_file_pair__on_fully_populated_directory.snap
---
source: tests/test_check_file_pair.rs
expression: "stdout.replace(temp_dir.path().to_str().unwrap(), \"<temp_dir>\")"
---
[INFO] Everything is fine, no missing files.
